--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Chicle&display=swap" rel="stylesheet">
-    <title>Exercicio</title>
+    <title>RelógioBMO</title>
 </head>
 <body onload="carregar()">
     <section class="body">
@@ -17,16 +19,28 @@
             <div class="circle-blue"></div>
         </div>
         <div class="pt2">
-            <div class="joy"></div>
+            <div class="joy">
+                    <div class="button up"></div>
+                    <div class="button down"></div>
+                    <div class="button left"></div>
+                    <div class="button right"></div>
+                <div class="button-mid1"></div>
+                <div class="button-mid2"></div> 
+            </div>
             <div class="butt"></div>
             <div class="butt"></div>
         </div>
         <div class="pt3">
-            <div class="triangle"></div>
+            <div class="triangle"><img src="img/triangle.png" alt=""></div>
             <div class="circle-green"></div>
             <div class="circle-red"></div>
         </div>
     </section>
+<div class="icons">
+    <a href="https://github.com/VitoriaPio" target="_blank"><i class="fa-brands fa-github" id="link"></i></a>
+    <a href="https://www.linkedin.com/in/vitoriapio/" target="_blank"><i class="fa-brands fa-linkedin" id="link"></i></a>
+    <a href="https://www.instagram.com/a.piio_/" target="_blank"><i class="fa-brands fa-square-instagram" id="link"></i></a>
+</div>
     <script src="script.js"></script>
 </body>
 </html>
